# pfp.blue

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Procfile.e2e  README.md  deny.toml  diagnose_keys.sh  fix_jobs.sh  fix_keys.sh  fly.toml  generate_base64_keys.sh  package.json  playwright.config.ts  setup_keys.sh
.claude/: settings.local.json
.sqlx/: query-0093025e21d86e77c50ce95cabc8ecaaf5f7f8639db01c94bd35bb7140232bed.json  query-02074b41a1f4bd34bbcf4bb50b3aaf603c0bc6d0e1f75f046901a9ee7e3a053b.json  query-03da4b7fb20e3bae7eca4c8fcd8965843abf1b2f65eac51becc60fa94e6a7593.json  query-0745d1b62cd900efc3a546fc96b83921119f84218113411d53ef3579ec2ef53d.json  query-116854caed856d66958ae576db9b545f98543623326f77cce90850467a8c63d9.json  query-132b8e733e4aecb8031d17d756f270212e4b8c1b88e1d5d82f45ad6483d4cf0b.json  query-13ee4650b2ab323a9d1888601140e400f494235debac70d0531a249e27e7f0e2.json  query-1a042db57c04f7a265fd25cf988cd9d30f1ae6213cc83acfafcc5ffa8cf271ef.json  query-1c9f19b26175f89895caf758d21db2d06d5d334b8ac6bf6aac359729b1f6de35.json  query-1f7b5693f1c2b7b1b6642f995408a8961efdd158afb7452528d03ebe4dc45e0c.json  query-243dc8ea11effb1048aa43054bdd224b56540065d6a13208e18c462148cd982e.json  query-2726c09c5e0c929b99f0c632389a803f080125111c1b7473bd0cdf3e6394d453.json  query-2aed2e46904e29419877d1d935818254ae9afad3292b8f8b211783616809db35.json  query-2b96d3e6d447b2ee9eafd7ea7ada1971990b49244eadb20128a286e7cfa7ffb3.json  query-2c5f34be86bdd3f90ed05248bbc7c89eeabc7b0b9b42044eae499d4ace99f7ab.json  query-303bc9af84749e769e8d418f724f5c15a57e5689c0ee47c78d998b806c645394.json  query-3c866865f7cd3f60392ce25f0c25b1764797593264b9d060668da2095f5e57e2.json  query-3ca7d858e6c906d773b8097f51c1ba6b9b8d89cd2325ecd228d251cbb60a8313.json  query-3cce0120ae827b5ae10e2d8d97c98d4cb73dc5bab1f34836d1c9c8e288e857d5.json  query-3e32a4452764ef43ef9d03723a14bec1913882e8b1a946b294035e749168bceb.json  query-4136338568782eb1438ef01dc6184871fd43a0736810777e20fbfeaa74da453d.json  query-453659ca42f68323a175a7a2a4de6caa48be23c8c518c20d1c344e89ad59102e.json  query-48d8f2b9223e950c9a9d4281c24be42bad240537baf60da8358f7c8e0911177f.json  query-49d5d51e0cc0e07a52b8ee4700ec58895a1db0b149c63dd71c596396e1a6d98d.json  query-50932ce4061b96500fb97be626b058c7bd4dded4f24500e2a63ef1a685416eb3.json  query-50e1889125a029f74fa294ead464debaa2e9e66052b4c71177f8ab399a81be26.json  query-513597b2a250fc6eee44e8ede94f6fd4a71a19f6cfdecbc36642456ad9a2f21a.json  query-519093b07c5e450ee6a84d4bb1328e9b97497e72fcfebf4efa77ef3d028745ad.json  query-51fac839613763947aedd5951bf92fa469027f809f4d4121302c2ff046f42525.json  query-5857ff12b595c8ed643d9ba5205a62171d13d7b22ecc5d73dc6f55a054956830.json  query-5c6823786a7d581db71cff94ac78545a6ca1854a1a376613445ed32294c48209.json  query-5efc06f586121b3dd1c46fa0f49dd390f22091905f77e6d5ca6511b83a233ba8.json  query-60efcc8c69d2a039e3f5520cd13241e2a17623f2c80ffd193d1c3625a033c51f.json  query-61cebbe168ce854f3b7c3c43e030f1b8fa8daedbaff0cd71a804374e25c906f8.json  query-6b573aa37909984a984d1dba050553dce59ed22c530166135f62940a0690cd2a.json  query-70370ec4a8ea136aadd9e20008da1d95eb9172ea45868469e6421d6e160a11e9.json  query-77c823822c96491b2dac5c607433c771b39bb981c11fca8d58301e0b89d99422.json  query-7b941392bf912002c021b7a10861f9dec9aa5d82668ef097e98353a9e6402afc.json  query-88a8ce22f717268514f0df2b68098bcb59f1fbb86bb48ce91a615bec637fcc2d.json  query-88b810ebd6b0df09b42675eea8c6d0b74e334b4e1a8c2f2c2034d191c66b939e.json  (+47 more)
end2end/: admin.spec.ts  auth.spec.ts  fixtures.ts  homepage.spec.ts  profile.spec.ts
fixtures/: Cargo.toml  README.md
fixtures/src/: lib.rs
fixtures/tests/: pds_tests.rs
migrations/: 20250304000000_CreateOAuthTables.sql  20250306151200_CreateUsersAndSessions.down.sql  20250306151200_CreateUsersAndSessions.sql  20250307000000_AddHandleToTokens.sql  20250307152008_AddPrimaryDIDToSessions.sql  20250307153512_FixPrimaryTokenIdType.sql  20250307180000_MakeDIDUnique.sql  20250307191000_AddProfilePictureProgress.sql  20250307192000_FixCronAndJobIds.sql  20250307215543_FixOAuthTokenIdType.sql  20250307220028_FinalizeTokenUuidChange.sql  20250307220143_FinalRenameUuidIdToId.sql  20250307221505_AddDefaultToOAuthSessionsId.sql  20250307221644_AddDefaultToRemainingIdColumns.sql  20250309000000_UseUUIDAsPrimaryKeys.sql  20250322142331_AddIsAdminToUsers.sql  20250322154441_RenameHandleToDisplayName.sql  20250322161159_AddHandleToOAuthTokens.sql  20250322190036_RemoveOriginalBlob.sql  20250328180023_EncryptOAuthSessions.sql  20250328182405_DropOAuthSessionsDataColumn.sql  20250409133650_DropUnusedColumns.down.sql  20250409133650_DropUnusedColumns.up.sql  20250430212745_CreateAtprotoSessionTable.down.sql  (+9 more)
scripts/: local-ci.sh  (+4 more)
server/: Cargo.toml
server/src/: api.rs  auth.rs  cookies.rs  cron.rs  did.rs  encryption.rs  errors.rs  http.rs  jobs.rs  lib.rs  main.rs  oauth.rs  prelude.rs  profile_progress.rs  routes.rs  state.rs  static_assets.rs  traits.rs  user.rs
server/src/components/: mod.rs
server/src/components/form/: mod.rs
server/src/components/layout/: mod.rs
server/src/components/profile/: account_card.rs  feature_card.rs  mod.rs
server/src/components/ui/: account_dropdown.rs  avatar.rs  badge.rs  button.rs  heading.rs  icon.rs  mod.rs  nav_buttons.rs
server/src/docs/: mod.rs  terminology.rs
server/src/jobs/: mod.rs  registry.rs
server/src/jobs/helpers/: mod.rs
server/src/jobs/job_types/: mod.rs  noop_job.rs  update_profile_info_job.rs  update_profile_picture_progress_job.rs
server/src/oauth/: db.rs  mod.rs  new.rs
server/src/oauth/dpop/: mod.rs
server/src/oauth/jwk/: mod.rs
server/src/oauth/session/: mod.rs
server/src/oauth/token/: mod.rs
server/src/oauth/utils/: mod.rs
server/src/orm/: accounts.rs  atproto_sessions.rs  atproto_states.rs  crons.rs  jobs.rs  mod.rs  oauth_sessions.rs  oauth_tokens.rs  oauth_tokens_temp.rs  prelude.rs  profile_picture_progress.rs  sessions.rs  users.rs
server/src/routes/: bsky.rs
server/src/routes/bsky/: auth.rs  blobs.rs  callback.rs  client_metadata.rs  mod.rs  profile.rs  tokens.rs  utils.rs
server/tests/: profile_picture_tests.rs
(+14 files in other folders)
