[workspace]
members = ["server", "fixtures"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.12.20", features = [
  "json",
  "rustls-tls",
  "multipart",
], default-features = false }
age = "0.11.1"
anyhow = "1.0"
async-trait = "0.1.60"
atrium-api = "0.25.4"
atrium-common = "0.1.2"
atrium-identity = "0.1.5"
atrium-oauth = { version = "0.1.1", default-features = false }
atrium-xrpc = "0.12.3"
atrium-xrpc-client = { version = "0.5.14", default-features = false }
axum = "0.7.4"
axum-macros = "0.4.0"
base64ct = "1.6"
bsky-sdk = { version = "0.1.18", default-features = false }
chrono = { version = "0.4.23", default-features = false }
cja = { version = "0.0.0", git = "https://github.com/coreyja/cja", branch = "main" }
clap = "4.4"
color-eyre = "0.6.2"
elliptic-curve = "0.13.8"
futures = "0.3.30"
image = "0.24"
imageproc = "0.23"
include_dir = "0.7.3"
infer = "0.15"
jose-jwk = "0.1.2"
jsonwebtoken = "9.3.0"
maud = "0.26.0"
mime = "0.3.17"
mime_guess = "2.0.4"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", default-features = false }
opentelemetry_sdk = "0.22.0"
p256 = "0.13"
rand = "0.8"
regex = "1.10"
ring = "0.17"
sea-orm = { version = "1.1.0", default-features = false }
sea-query = { version = "0.32.4", default-features = false }
sea-query-binder = { version = "0.7.0", default-features = false }
sec1 = "0.7.3"
sentry = { version = "0.32.2", default-features = false }
sentry-tower = "0.32.2"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
sha2 = "0.10"
sqlx = { version = "0.8.5", default-features = false }
tempfile = "3.8"
thiserror = "1.0"
time = "0.3.9"
tokio = "1.35"
tower = "0.4.13"
tower-http = "0.5.2"
tracing = "0.1.37"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.16"
tracing-tree = "0.3.0"
trust-dns-resolver = "0.23.2"
url = "2.5"
urlencoding = "2.1"
uuid = "1.6.1"
vergen = "8.3.1"
