[package]
name = "fixtures"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# Bluesky API types
atrium-api = "0.25.0"

[[bin]]
name = "pds"
path = "src/bin/pds.rs"

[[bin]]
name = "appview"
path = "src/bin/appview.rs"

[[bin]]
name = "plc-directory"
path = "src/bin/plc_directory.rs"
