[package]
name = "fixtures"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

# Bluesky API types
atrium-api = { workspace = true }

# Database
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
base64 = "0.22"

[dev-dependencies]
reqwest.workspace = true
url = { workspace = true }

[[bin]]
name = "pds"
path = "src/bin/pds.rs"

[[bin]]
name = "appview"
path = "src/bin/appview.rs"

[[bin]]
name = "plc-directory"
path = "src/bin/plc_directory.rs"
