[package]
name = "pfp-blue"
version = "0.1.0"
edition = "2021"
default-run = "pfp-blue"

build = "build.rs"

[features]
# Enable this feature once the encrypted_oauth migrations have been applied
encrypted_oauth = []

[[bin]]
name = "generate-key"
path = "src/bin/generate_key.rs"

[dependencies]
tokio = { version = "1.21", features = ["full"] }
color-eyre = "0.6.2"

opentelemetry = { version = "0.22.0" }
opentelemetry_sdk = { version = "0.22.0", features = ["rt-tokio"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.3.0"
opentelemetry-otlp = { version = "0.15.0", features = [
  "http-proto",
  "reqwest-rustls",
  "reqwest-client",
], default-features = false }
sentry = { version = "0.32.2", default-features = false, features = [
  "rustls",
  "backtrace",
  "contexts",
  "panic",
  "tower",
  "reqwest",
] }
sentry-tower = { version = "0.32.2", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maud = { version = "0.26.0", features = ["axum"] }
async-trait = "0.1.60"
axum = "0.7.4"
axum-macros = "0.4.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tower = "0.4.13"
thiserror = "1.0"
reqwest = { version = "0.12.12", features = [
  "json",
  "rustls-tls",
  "multipart",
], default-features = false }

cja = { version = "0.0.0", git = "https://github.com/coreyja/cja", branch = "main" }
sqlx = { version = "0.8.5", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
] }
uuid = { version = "1.6.1", features = ["v4"] }
time = "0.3.9"
futures = "0.3.30"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
jsonwebtoken = "9.3.0"
p256 = { version = "0.13", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
base64 = "0.21"
base64ct = { version = "1.6", features = ["alloc"] }
ring = "0.17"
rand = "0.8"
sha2 = "0.10"
tempfile = "3.8"
urlencoding = "2.1"
# simple_asn1 = "0.6"
# num-bigint = "0.4"

# atrium-identity = { version = "0.1", git = "https://github.com/sugyan/atrium" }
# atrium-api = { version = "0.24", git = "https://github.com/sugyan/atrium" }
# atrium-common = { version = "0.1", git = "https://github.com/sugyan/atrium" }
# atrium-xrpc-client = { version = "0.5", git = "https://github.com/sugyan/atrium", default-features = false, features = [
#   "reqwest",
# ] }

bsky-sdk = { version = "0.1.18", default-features = false, features = [
  "rich-text",
] }
atrium-oauth = { version = "0.1.1", default-features = false, features = [
], path = "../../atrium/atrium-oauth" }
image = "0.24"
# Dependencies for profile picture progress feature
imageproc = "0.23"
regex = "1.10"
infer = "0.15"
age = { version = "0.11.1", features = ["armor"] }
include_dir = "0.7.3"
mime_guess = "2.0.4"
mime = "0.3.17"
serde_urlencoded = "0.7.1"
atrium-identity = { version = "0.1.5", path = "../../atrium/atrium-identity" }
atrium-api = { version = "0.25.4", path = "../../atrium/atrium-api" }
atrium-common = { version = "0.1.2", path = "../../atrium/atrium-common" }
atrium-xrpc-client = { version = "0.5.14", default-features = false, features = [
  "reqwest",
], path = "../../atrium/atrium-xrpc-client" }
sec1 = { version = "0.7.3", features = ["pem", "std"] }
elliptic-curve = { version = "0.13.8", features = ["pem", "jwk", "std"] }
jose-jwk = "0.1.2"
trust-dns-resolver = { version = "0.23.2", features = ["tokio-rustls"] }
sea-orm = { version = "1.1.0", default-features = false, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-json",
  "with-chrono",
  "with-uuid",
] }
sea-query-binder = { version = "0.7.0", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-uuid",
] }
sea-query = { version = "0.32.4", default-features = false, features = [
  "backend-postgres",
] }
atrium-xrpc = { version = "0.12.3", path = "../../atrium/atrium-xrpc" }

[build-dependencies]
vergen = { version = "8.3.1", features = [
  "build",
  "cargo",
  "git",
  "gitoxide",
  "rustc",
] }
