[package]
name = "pfp-blue"
version = "0.1.0"
edition = "2021"
default-run = "pfp-blue"

build = "build.rs"

[features]
# Enable this feature once the encrypted_oauth migrations have been applied
encrypted_oauth = []

[[bin]]
name = "generate-key"
path = "src/bin/generate_key.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
color-eyre = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-tree = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["http-proto", "reqwest-rustls", "reqwest-client"] }
sentry = { workspace = true, features = ["rustls", "backtrace", "contexts", "panic", "tower", "reqwest"] }
sentry-tower = { workspace = true, features = ["http"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
maud = { workspace = true, features = ["axum"] }
async-trait = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tower = { workspace = true }
thiserror = { workspace = true }
reqwest.workspace = true

cja = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { workspace = true, features = ["v4"] }
time = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
p256 = { workspace = true, features = ["ecdsa", "jwk", "pem", "pkcs8"] }
base64 = "0.21"
base64ct = { workspace = true, features = ["alloc"] }
ring = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
urlencoding = { workspace = true }

bsky-sdk = { workspace = true, features = ["rich-text"] }
atrium-oauth = { workspace = true, features = [] }
image = { workspace = true }
# Dependencies for profile picture progress feature
imageproc = { workspace = true }
regex = { workspace = true }
infer = { workspace = true }
age = { workspace = true, features = ["armor"] }
include_dir = { workspace = true }
mime_guess = { workspace = true }
mime = { workspace = true }
serde_urlencoded = { workspace = true }
atrium-identity = { workspace = true }
atrium-api = { workspace = true }
atrium-common = { workspace = true }
atrium-xrpc-client = { workspace = true, features = ["reqwest"] }
sec1 = { workspace = true, features = ["pem", "std"] }
elliptic-curve = { workspace = true, features = ["pem", "jwk", "std"] }
jose-jwk = { workspace = true }
trust-dns-resolver = { workspace = true, features = ["tokio-rustls"] }
sea-orm = { workspace = true, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-chrono", "with-uuid"] }
sea-query-binder = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-uuid"] }
sea-query = { workspace = true, features = ["backend-postgres"] }
atrium-xrpc = { workspace = true }

[build-dependencies]
vergen = { workspace = true, features = ["build", "cargo", "git", "gitoxide", "rustc"] }
